refactor: directory for each _test.go file

--- a/pruebas/steps/config-file.json
+++ b/pruebas/steps/config-file.json
@@ -1,6 +1,7 @@
 {
     "API": {
         "baseUrl": "http://127.0.0.1:80",
-        "loginUserUrl": "http://127.0.0.1:80/"
+        "loginUserUrl": "http://127.0.0.1:80/",
+        "createUserUrl": "http://127.0.0.1:80/users"
     }
 }
