--- a/pruebas/steps/config-file.json
+++ b/pruebas/steps/config-file.json
@@ -2,6 +2,7 @@
     "API": {
         "baseUrl": "http://127.0.0.1:80",
         "loginUserUrl": "http://127.0.0.1:80/",
-        "createUserUrl": "http://127.0.0.1:80/users"
+        "createUserUrl": "http://127.0.0.1:80/users/",
+        "deleteUserUrl": "http://127.0.0.1:80/users/3"
     }
 }
