fix: Request GET must not have Body, so the Request is Patch now

--- a/OpenApi/Documentation.yml
+++ b/OpenApi/Documentation.yml
@@ -42,7 +42,7 @@ paths:
                 $ref: '#/components/schemas/Unsuccess'
 
   /password:
-    get:
+    patch:
       tags:
         - password
       summary: Recover password (returns token)
